Implementing 0.1.7 - containerDetails: volumes

--- a/app/containerDetails/containerDetails.html
+++ b/app/containerDetails/containerDetails.html
@@ -135,6 +135,29 @@
         <div class="col-md-1 text-right"><strong>Entry point</strong></div>
         <div class="col-md-11"><code>{{containerDetails.Config.Entrypoint.join(' ')}}</code></div>
     </div>
+    <div class="row">
+        <div class="col-md-1 text-right"><strong>Volumes</strong></div>
+        <div class="col-md-1">
+            <table class="table table-condensed table-hover table-bordered" ng-show="!isEmpty(containerDetails.Volumes)">
+                <thead>
+                <tr class="success">
+                    <th class="text-center">Host</th>
+                    <th class="text-center">Container</th>
+                    <th class="text-center">Writeable</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr ng-repeat="(key,value) in containerDetails.Volumes">
+                    <td>{{value}}</td>
+                    <td>{{key}}</td>
+                    <td>{{containerDetails.VolumesRW[key]==true?'yes':'no'}}</td>
+                </tr>
+                </tbody>
+            </table>
+
+        </div>
+        <!--<div class="col-md-11">{{containerDetails.Volumes["/vol"]}}</div>-->
+    </div>
     <hr/>
     <ul class="nav nav-tabs">
         <li role="presentation" ng-class="{'active':activeTab=='top'}"><a
