--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>DockerMon</title>
     <link rel="shortcut icon" href="assets/img/docker_icon.jpg">
     <link rel='stylesheet' href='assets/libs/bootstrap/dist/css/bootstrap.css'>
+    <link rel='stylesheet' href='assets/libs/font-awesome/css/font-awesome.min.css'>
     <link rel="stylesheet" href="assets/libs/json-formatter/dist/json-formatter.min.css">
     <link rel="stylesheet" href="assets/libs/xterm.js/src/xterm.css">
     <link rel='stylesheet' href='assets/css/custom.css'>
@@ -14,7 +15,8 @@
     <div class="navbar-header">
         <nav class="navbar navbar-default navbar-fixed-top ">
             <div class="navbar-header">
-                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false"
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar"
+                        aria-expanded="false"
                         aria-controls="navbar">
                     <span class="sr-only">Toggle navigation</span>
                     <span class="icon-bar"></span>
