Adding some icon

--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#/hostDetails">Docker|mon</a>
+                <a class="navbar-brand" href="#/hostDetails"><span class="fa fa-desktop"></span>|Dockermon</a>
             </div>
             <div id="navbar" class="collapse navbar-collapse">
                 <ul class="nav navbar-nav">
-                    <li><a class="active" href="#/hosts">Hosts</a></li>
-                    <li><a class="active" href="#/containers">Containers</a></li>
-                    <li><a href="#/images">Images</a></li>
+                    <li><a class="active" href="#/hosts"><span class="fa fa-server"></span> Hosts</a></li>
+                    <li><a class="active" href="#/containers"><span class="fa fa-cubes"></span> Containers</a></li>
+                    <li><a href="#/images"><span class="fa fa-database"></span> Images</a></li>
                 </ul>
                 <ul class="nav navbar-nav pull-right">
                     <li><a href="#">Help</a></li>
