--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#/hostDetails"><span class="fa fa-desktop"></span>|Dockermon</a>
+                <a class="navbar-brand" href="#/hostDetails"><span class="fa fa-desktop"></span> Dockermon</a>
             </div>
             <div id="navbar" class="collapse navbar-collapse">
                 <ul class="nav navbar-nav">
