Starting implementation create container

--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
 <script src="app/hostDetails/hostDetails.js"></script>
 <script src="app/containers/containers.js"></script>
 <script src="app/containerDetails/containerDetails.js"></script>
+<script src="app/createContainer/createContainer.js"></script>
 <script src="app/images/images.js"></script>
 <script src="app/imageDetails/imageDetails.js"></script>
 </body>
