--- a/app/createContainer/createContainer.html
+++ b/app/createContainer/createContainer.html
@@ -1,3 +1,162 @@
 <div class="col-md-12 ">
-    <h1>Create container</h1>
+    <h1><span class="fa fa-cube"></span> Create a container</h1>
+
+    <div class="col-md-4">
+        <div class="panel panel-success">
+            <div class="panel-heading">
+                <h4 class="panel-title"><span class="fa fa-gears"></span> Generic settings</h4>
+            </div>
+            <div class="panel-body">
+                <div class="col-md-3 vcenter text-right">
+                    Name:
+                </div>
+                <div class="col-md-9 input-group">
+                    <input type="text" class="form-control" id="newContainerName" ng-model="newContainerName"
+                           placeholder="container name">
+                    <span class="input-group-btn">
+                            <button ng-click="updateStatus()" title="Generate random name" type="submit"
+                                    class="btn btn-success"
+                                    style="width: 40px; margin-right: 160px;margin-left: 3px;">
+                                <span class="fa fa-smile-o"></span>
+                            </button>
+                    </span>
+                </div>
+                <br/>
+
+                <div class="col-md-3 vcenter text-right">
+                    Image:
+                </div>
+                <div class="col-md-9 input-group">
+                    <input type="text" class="form-control" id="newContainerName" ng-model="newContainerName"
+                           placeholder="container name">
+
+                </div>
+                <div class="col-md-12">
+                    <div class="checkbox">
+                        <label>
+                            <input type="checkbox"> <strong>Start automatically</strong>
+                        </label>
+                    </div>
+
+                    <div class="checkbox">
+                        <label>
+                            <input type="checkbox"> remove after exit (--rm)
+                        </label>
+                    </div>
+                    <div class="checkbox">
+                        <label>
+                            <input type="checkbox"> detached mode (-d, --detach)
+                        </label>
+                    </div>
+                    <div class="checkbox">
+                        <label>
+                            <input type="checkbox"> Allocate a pseudo-TTY (-t, --tty)
+                        </label>
+                    </div>
+                    <div class="checkbox">
+                        <label>
+                            <input type="checkbox"> Keep STDIN open even if not attached (-i, --interactive=false)
+                        </label>
+                    </div>
+                    <div class="checkbox">
+                        <label>
+                            <input type="checkbox"> Give extended privileges to this container (--privileged)
+                        </label>
+                    </div>
+                </div>
+            </div>
+            <div class="panel-footer">Footer</div>
+        </div>
+    </div>
+    <div class="col-md-4">
+        <div class="panel panel-info">
+            <div class="panel-heading">
+                <h4 class="panel-title"><span class="fa fa-sitemap"></span> Network</h4>
+            </div>
+            <div class="panel-body">
+                <div class="col-md-12">
+                    <div class="checkbox">
+                        <label>
+                            <input type="checkbox"> Publish all exposed ports to random ports (-P, --publish-all)
+                        </label>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <input type="text" class="form-control" id="newContainerName" ng-model="newContainerName"
+                           placeholder="container name">
+
+                </div>
+                <div class="col-md-6">
+                    <input type="text" class="form-control" id="newContainerName" ng-model="newContainerName"
+                           placeholder="container name">
+
+                </div>
+                <div class="col-md-6">
+                    <input type="text" class="form-control" id="newContainerName" ng-model="newContainerName"
+                           placeholder="container name">
+
+                </div>
+                <div class="col-md-6">
+                    <input type="text" class="form-control" id="newContainerName" ng-model="newContainerName"
+                           placeholder="container name">
+
+                </div>
+                <div class="col-md-6">
+                    <input type="text" class="form-control" id="newContainerName" ng-model="newContainerName"
+                           placeholder="container name">
+
+                </div>
+                <div class="col-md-6">
+                    <input type="text" class="form-control" id="newContainerName" ng-model="newContainerName"
+                           placeholder="container name">
+
+                </div>
+                <div class="col-md-12">
+                    <h4>Expose a port or a range of ports
+                        <small>(--expose)</small>
+                    </h4>
+                    <input type="text" class="form-control" id="newContainerName" ng-model="newContainerName"
+                           placeholder="container name">
+                    <input type="text" class="form-control" id="newContainerName" ng-model="newContainerName"
+                           placeholder="container name">
+                    <input type="text" class="form-control" id="newContainerName" ng-model="newContainerName"
+                           placeholder="container name">
+
+                </div>
+
+            </div>
+            <div class="panel-footer">Panel footer</div>
+        </div>
+    </div>
+    <div class="col-md-4">
+        <div class="panel panel-warning">
+            <div class="panel-heading">
+                <h4 class="panel-title"><span class="fa fa-tachometer"></span> Runtime settings</h4>
+            </div>
+            <div class="panel-body">
+                <div class="col-md-12">
+                    <h4>Environment variables
+                        <small>(-e, --env)</small>
+                    </h4>
+                </div>
+                <div class="col-md-12">
+                    <h4>Entrypoint
+                        <small>(--entrypoint)</small>
+                    </h4>
+                    <input type="text" class="form-control" id="newContainerName" ng-model="newContainerName"
+                           placeholder="container name">
+                </div>
+                <div class="col-md-12">
+                    <h4>Working directory
+                        <small>(-w, --workdir)</small>
+                    </h4>
+                    <input type="text" class="form-control" id="newContainerName" ng-model="newContainerName"
+                           placeholder="container name">
+                </div>
+
+            </div>
+            <div class="panel-footer">Panel footer</div>
+        </div>
+    </div>
+
 </div>
