Started working on field validations

--- a/app/createContainer/createContainer.html
+++ b/app/createContainer/createContainer.html
@@ -17,7 +17,9 @@
                     <h4 class="panel-title"><span class="fa fa-gears"></span> Basic settings</h4>
                 </div>
                 <div class="panel-body">
-
+                    <div class="col-md-12 text-center" style="color: red" ng-messages="imageEmpty">
+                        <strong>Image not specified!</strong>
+                    </div>
                     <div class="col-md-3 vcenter text-right">
                         <strong>Image</strong>
                     </div>
