--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
 <script src="assets/libs/bootstrap/dist/js/bootstrap.js"></script>
 <!---->
 <script src="assets/libs/angular/angular.js"></script>
+<script src="assets/libs/angular-messages/angular-messages.js"></script>
 <script src="assets/libs/angular-route/angular-route.js"></script>
 <script src="assets/libs/angular-resource/angular-resource.js"></script>
 <script src="assets/libs/json-formatter/dist/json-formatter.js"></script>
